@@ -3,6 +3,9 @@ hw-detect (1.66) UNRELEASED; urgency=low
   [ Jérémy Bobbio ]
   * On frontends other than GTK+, only ask about PCMCIA resource range when
     user decided to start PCMCIA.  (Closes: #479391)
+  * Fix ethdetect and hw-detect for NICs named differently than ethX.
+    (Closes: #495676)
+    Thanks to Frans Pop for suggesting a better implementation.
 
   [ Ian Campbell ]
   * Add Xen virtual Ethernet to list of known Ethernet drivers.
